# Sensor

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: Signature.jks  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: hello-jni.c
app/src/main/res/drawable/: spannable_animation.xml
app/src/main/res/layout/: activity_baidu_map.xml  activity_camera_activity.xml  activity_camera_gl_activity.xml  activity_content_provider.xml  activity_dpi_test.xml  activity_dragger.xml  activity_drawable.xml  activity_face_detection.xml  activity_fang_yi_bang.xml  activity_fragment_stack.xml  activity_jni_test.xml  activity_main.xml  activity_map.xml  activity_matrix_camera.xml  activity_model.xml  activity_path_on_draw.xml  activity_qrcode.xml  activity_record.xml  activity_spannable_string.xml  activity_universal_image_loader.xml  activity_wifi.xml  content_drawable.xml  content_qrcode.xml  fragment_stack_a.xml  fragment_stack_b.xml  fragment_stack_c.xml  fragment_stack_d.xml  list_item.xml  wifi_connect_dialog.xml
app/src/main/res/menu/: menu_drawable.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
myjni/: CMakeLists.txt  build.gradle
myjni/src/androidTest/java/com/xogrp/john/myjni/: ExampleInstrumentedTest.java
myjni/src/main/: AndroidManifest.xml
myjni/src/main/cpp/: stringfromJNI.cpp
myjni/src/main/java/com/xogrp/john/myjni/: NdkUtil.java
myjni/src/main/res/values/: strings.xml
myjni/src/test/java/com/xogrp/john/myjni/: ExampleUnitTest.java
(+46 files in other folders)
